[package]
name = "oxish"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.95"
aws-lc-rs = { version = "1.12", features = ["prebuilt-nasm"] }
clap = { version = "4.5.24", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
unreachable_pub = { level = "warn" }

[lints.clippy]
use_self = { level = "warn" }
