[workspace]
members = ["oxish", "oxish-proto"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
aws-lc-rs = { version = "1.12", features = ["prebuilt-nasm"] }
bitflags = "2"
clap = { version = "4.5.60", features = ["derive"] }
data-encoding = "2.10"
libc = "0.2"
listenfd = "1.0.2"
proto = { package = "oxish-proto", version = "0.1", path = "oxish-proto" }
thiserror = "2.0.9"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
tokio-stream = "0.1.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rustix = { version = "1", features = ["termios", "pty", "process", "fs", "stdio"] }

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"
