[package]
name = "oxish-proto"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR MIT"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha1 = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
