[package]
name = "oxish-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
sha1 = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
