[package]
name = "oxish"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"

[features]
default = ["graviola"]
aws-lc = ["dep:aws-lc"]
graviola = ["dep:graviola"]

[dependencies]
anyhow = { workspace = true }
aws-lc = { package = "oxish-aws-lc", version = "0.1.0", path = "../oxish-aws-lc", optional = true }
bitflags = { workspace = true }
clap = { workspace = true }
data-encoding = { workspace = true }
graviola = { package = "oxish-graviola", version = "0.1.0", path = "../oxish-graviola", optional = true }
libc = { workspace = true }
listenfd = { workspace = true }
proto = { package = "oxish-proto", version = "0.1", path = "../oxish-proto" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
